--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,8 @@ aiosqlite~=0.20.0
 environs~=11.2.1
 bs4~=0.0.2
 beautifulsoup4~=4.12.3
+fastapi~=0.115.14
+jinja2~=3.1.6
+uvicorn
+plotly~=6.2.0
+aiohttp~=3.10.11
