--- a/src/.env.example
+++ b/src/.env.example
@@ -1,2 +1,6 @@
 BOT_TOKEN=your_bot_token
-ADMIN_USER_ID=your_admin_user_id
+BOT_ADMIN_USER_ID=your_admin_user_id
+SEARCH_RESULT_COUNT=5
+DATABASE_PATH=../data/sounds_database.db
+TOP_USER_REQUESTS_COUNT=5
+FEEDBACK_MESSAGE="Сообщение для обратной связи"
