--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: "3.1"
 
 services:
   audio_hunter_bot:
@@ -11,12 +11,12 @@ services:
       TOP_USER_REQUESTS_COUNT: "5"
       FEEDBACK_MESSAGE: |
         Дорогие друзья! 🐾
-        
+
         Рад сообщить, что бот стал ещё интереснее и полезнее! Теперь вместе со звуками вы будете получать красивые картинки, иллюстрирующие каждый звук.
         Например, вместе с «му» коровы вы увидите яркую и веселую картинку с коровой. 🎨🐄
-        
+
         Спасибо вам за то, что пользуетесь моим ботом! ❤️
-        
+
         Если у вас есть предложения, пожелания или идеи по улучшению работы бота, обязательно пишите мне: @Slabodenyuk_Anatoly
     build:
       context: .
@@ -24,3 +24,5 @@ services:
     restart: always
     volumes:
       - ./data:/app/data
+    ports:
+      - "3000:3000"
