--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,8 @@ services:
       SEARCH_RESULT_COUNT: "5"
       DATABASE_PATH: "data/sounds_database.db"
       TOP_USER_REQUESTS_COUNT: "5"
-      FEEDBACK_MESSAGE: |
-        Дорогие друзья! 🐾
-
-        Рад сообщить, что бот стал ещё интереснее и полезнее! Теперь вместе со звуками вы будете получать красивые картинки, иллюстрирующие каждый звук.
-        Например, вместе с «му» коровы вы увидите яркую и веселую картинку с коровой. 🎨🐄
-
-        Спасибо вам за то, что пользуетесь моим ботом! ❤️
-
-        Если у вас есть предложения, пожелания или идеи по улучшению работы бота, обязательно пишите мне: @Slabodenyuk_Anatoly
+      FEEDBACK_MESSAGE: "Сообщение для обратной связи"
+      WEBAPP_URL: "https://example.com"
     build:
       context: .
       dockerfile: Dockerfile
