--- a/src/.env.example
+++ b/src/.env.example
@@ -4,3 +4,4 @@ SEARCH_RESULT_COUNT=5
 DATABASE_PATH=../data/sounds_database.db
 TOP_USER_REQUESTS_COUNT=5
 FEEDBACK_MESSAGE="Сообщение для обратной связи"
+WEBAPP_URL="https://example.com"
